--- a/SASS/index.css
+++ b/SASS/index.css
@@ -1,3 +1,47 @@
+/* animation keyframes */
+@keyframes desapear {
+  0% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+@keyframes languageSwitch {
+  0% {
+    bottom: 0;
+  }
+  15% {
+    bottom: 0;
+  }
+  20% {
+    bottom: 90px;
+  }
+  35% {
+    bottom: 90px;
+  }
+  40% {
+    bottom: 180px;
+  }
+  55% {
+    bottom: 180px;
+  }
+  60% {
+    bottom: 270px;
+  }
+  75% {
+    bottom: 270px;
+  }
+  80% {
+    bottom: 360px;
+  }
+  95% {
+    bottom: 360px;
+  }
+  100% {
+    bottom: 450px;
+  }
+}
 body {
   margin: 0px;
   font-family: roboto;
@@ -55,50 +99,6 @@ a {
   align-items: center;
 }
 
-/* animation keyframes */
-@keyframes desapear {
-  0% {
-    visibility: visible;
-  }
-  100% {
-    visibility: hidden;
-  }
-}
-@keyframes languageSwitch {
-  0% {
-    bottom: 0;
-  }
-  15% {
-    bottom: 0;
-  }
-  20% {
-    bottom: 90px;
-  }
-  35% {
-    bottom: 90px;
-  }
-  40% {
-    bottom: 180px;
-  }
-  55% {
-    bottom: 180px;
-  }
-  60% {
-    bottom: 270px;
-  }
-  75% {
-    bottom: 270px;
-  }
-  80% {
-    bottom: 360px;
-  }
-  95% {
-    bottom: 360px;
-  }
-  100% {
-    bottom: 450px;
-  }
-}
 header {
   display: flex;
   flex-direction: column;
@@ -169,18 +169,18 @@ header .header__banner--button--link:hover {
   align-items: center;
   margin-bottom: 200px;
 }
-.filters .filters__title {
+.filters__title {
   font-size: 40px;
   display: flex;
   align-self: flex-start;
   padding-left: 5%;
   padding-top: 90px;
 }
-.filters .filters__contener {
+.filters__contener {
   display: flex;
   flex-direction: column;
 }
-.filters .filters__contener:hover .filters__contener--link i {
+.filters__contener:hover .filters__contener--link i {
   color: #9356DC;
 }
 .filters__contener--button {
@@ -228,14 +228,14 @@ header .header__banner--button--link:hover {
   align-items: center;
   background-color: #f6f6f6;
 }
-.restaurants .restaurants__title {
+.restaurants__title {
   display: flex;
   align-self: flex-start;
   padding-left: 8%;
   font-size: 50px;
   margin-top: 50px;
 }
-.restaurants .restaurants__cards {
+.restaurants__cards {
   display: flex;
   flex-direction: column;
 }
@@ -304,28 +304,28 @@ header .header__banner--button--link:hover {
           background-clip: text;
 }
 
-footer {
+.footer__content {
   background-color: #353535;
   width: 100%;
   padding-left: 40px;
   padding-top: 60px;
   padding-bottom: 60px;
 }
-footer .footer__content--logo {
+.footer__content--logo {
   color: white;
   font-family: "Shrikhand", serif;
   font-size: 40px;
 }
-footer .footer__content--links {
+.footer__content--links {
   display: flex;
   flex-direction: column;
 }
-footer .footer__content--links a {
+.footer__content--links a {
   color: white;
   padding-top: 20px;
   font-size: 30px;
 }
-footer .footer__content--links i {
+.footer__content--links i {
   padding-right: 10px;
 }
 
