--- a/SASS/resto.scss
+++ b/SASS/resto.scss
@@ -204,31 +204,32 @@ a {
 
 }
 
-footer {
+.footer {
     background-color: #353535;
     width: 100%;
-    padding-left: 40px;
     padding-top: 60px;
     padding-bottom: 60px;
-    .footer__content--logo {
-        color: $colortxtwhite;
-        font-family: "Shrikhand", serif;
-        font-size: 40px;
-    }
-    .footer__content--links {
-        display: flex;
-        flex-direction: column;
-    }
-    .footer__content--links a {
-        color:$colortxtwhite;
-        padding-top: 20px;
-        font-size: 30px;
-    }
-    .footer__content--links i {
-        padding-right: 10px;
-    }
+    &__content {
+        padding-left: 40px;
+        &--logo {
+            color: $colortxtwhite ;
+            font-family: "Shrikhand", serif;
+            font-size: 40px;
+        }
+        &--links {
+            display: flex;
+            flex-direction: column;
+        }
+        &--links a {
+            color: $colortxtwhite ;
+            padding-top: 20px;
+            font-size: 30px;
+        }
+        &--links i {
+            padding-right: 10px;
+        }
 }
-
+}
 @media (min-width: 1440px) {
     body  {
         background-color: $mainbgcolor;
@@ -252,33 +253,32 @@ footer {
         
         
     }
-    footer {
+    .footer {
         padding-top: 0px;
     
+        &__content {
+            display: flex;
+            flex-direction: row-reverse;
+            align-items: baseline;
+            justify-content: end;
+            padding-top: 40px;
+            padding-right: 60px;
+            &--logo{
+                    font-size: 20px;
+                    padding-left: 80px;
+                    
+                
+                    
+                }
+                &--links {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 50px;
+                }
+            &--links a {
+                    font-size: 20px;
+                    padding: 0px;
+                }
     }
-    footer .footer__content {
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: baseline;
-        padding-right: 90px;
-        justify-content: end;
-        padding-top: 40px;
-       
-    }  
-    footer .footer__content--logo{
-        font-size: 20px;
-        padding-left: 80px;
-        
-       
-        
     }
-    footer .footer__content--links {
-        display: flex;
-        flex-direction: row;
-        gap: 50px;
-    }
-    footer .footer__content--links a {
-        font-size: 20px;
-        padding: 0px;
-      }
 }
