--- a/SASS/index.css
+++ b/SASS/index.css
@@ -46,6 +46,7 @@ body {
   margin: 0px;
   font-family: roboto;
   background-color: #ffffff;
+  width: 100%;
 }
 
 a {
@@ -270,7 +271,7 @@ header .header__banner--button--link:hover {
 .restaurants__cards--card-content {
   width: 100%;
   padding-left: 70px;
-  height: 170px;
+  height: 140px;
   position: relative;
 }
 .restaurants__cards--card-content-title {
@@ -282,12 +283,13 @@ header .header__banner--button--link:hover {
 .restaurants__cards--card-content-subtitle {
   color: black;
   font-size: 35px;
+  margin-bottom: 0px;
 }
 .restaurants__cards--card-like {
   display: flex;
   align-self: flex-end;
   position: absolute;
-  bottom: 45px;
+  bottom: 60px;
   right: 60px;
 }
 .restaurants__cards--card-like i {
