--- a/SASS/index.scss
+++ b/SASS/index.scss
@@ -69,6 +69,7 @@ body{
     margin: 0px;
     font-family: roboto;
     background-color: $mainbgcolor;
+    width: 100%;
 }
 a {
     text-decoration: none;
@@ -303,7 +304,7 @@ header {
                 &-content {
                     width: 100%;
                     padding-left: 70px;
-                    height: 170px;
+                    height: 140px;
                     position: relative;
                     &-title {
                         color: black;
@@ -315,6 +316,7 @@ header {
                     &-subtitle {
                         color: black;
                         font-size: 35px;
+                        margin-bottom: 0px;
                     }
                     
                 }
@@ -322,7 +324,7 @@ header {
                 display: flex;
                 align-self: flex-end;
                 position: absolute;
-                bottom: 45px;
+                bottom: 60px;
                 right: 60px;
                
             }    
@@ -336,6 +338,7 @@ header {
                     color: transparent;
                     background:linear-gradient(50deg, #9356DC, #FF79DA);
                     background-clip: text;
+                    
                   
                 }
             }
