--- a/SASS/index.css
+++ b/SASS/index.css
@@ -65,7 +65,7 @@ a {
   z-index: 4;
   animation: desapear;
   animation-duration: 4800ms;
-  animation-fill-mode: forwards;
+  animation-fill-mode: both;
 }
 .loader__Wrapper {
   height: 90px;
@@ -269,9 +269,9 @@ header .header__banner--button--link:hover {
   border-radius: 5px;
 }
 .restaurants__cards--card-content {
-  width: 100%;
+  width: 430px;
   padding-left: 70px;
-  height: 140px;
+  height: 160px;
   position: relative;
 }
 .restaurants__cards--card-content-title {
@@ -284,6 +284,7 @@ header .header__banner--button--link:hover {
   color: black;
   font-size: 35px;
   margin-bottom: 0px;
+  padding-bottom: 40px;
 }
 .restaurants__cards--card-like {
   display: flex;
@@ -294,9 +295,9 @@ header .header__banner--button--link:hover {
 }
 .restaurants__cards--card-like i {
   font-size: 50px;
-  color: black;
   transition-property: all;
-  transition: 500ms;
+  transition: 300ms cubic-bezier(1, 0.05, 0, 1.49);
+  animation-direction: alternate;
 }
 .restaurants__cards--card-like i:hover {
   font-weight: 900;
