--- a/SASS/index.scss
+++ b/SASS/index.scss
@@ -88,7 +88,7 @@ a {
     z-index: 4;
     animation: desapear;
     animation-duration: 4800ms;
-    animation-fill-mode: forwards;
+    animation-fill-mode: both;
     &__Wrapper {
         height: 90px;
         overflow: hidden;
@@ -302,9 +302,9 @@ header {
         
                 }
                 &-content {
-                    width: 100%;
+                    width: 430px;
                     padding-left: 70px;
-                    height: 140px;
+                    height: 160px;
                     position: relative;
                     &-title {
                         color: black;
@@ -317,6 +317,7 @@ header {
                         color: black;
                         font-size: 35px;
                         margin-bottom: 0px;
+                        padding-bottom: 40px;
                     }
                     
                 }
@@ -330,9 +331,9 @@ header {
             }    
             &-like i {
                 font-size: 50px;
-                color: black;
                 transition-property: all;
-                transition: 500ms;
+                transition: 300ms cubic-bezier(1,.05,0,1.49);
+                animation-direction: alternate;
                 &:hover {
                     font-weight: 900;
                     color: transparent;
