--- a/SASS/resto.scss
+++ b/SASS/resto.scss
@@ -59,7 +59,8 @@ a {
         font-size: 50px;
         color: black;
         transition-property: all;
-        transition: 400ms;
+        transition: 300ms cubic-bezier(1,.05,0,1.49);
+        animation-direction: alternate;
         padding-right: 50px;
         &:hover {
             font-weight: 900;
