--- a/SASS/index.css
+++ b/SASS/index.css
@@ -378,15 +378,14 @@ header .header__banner--button--link:hover {
     padding-right: 50px;
   }
   .restaurants .restaurants__title {
-    padding-left: 170px;
+    padding-left: 12%;
     font-size: 30px;
   }
   .restaurants .restaurants__cards {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px 40px;
   }
   .restaurants__cards--card {
     width: 600px;
